--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             }
         }
     },function(error){
-      console.log(error);
+      console.log(error.error_code);
     });
   }
   
